# jd-game

./: CMakeLists.txt  GameServer.pro  README.md
Client/: Dashboard.ui.qml  DashboardScreen.ui.qml  EndGameScreen.ui.qml  GameAreaScreen.qml  GameAreaScreen_kopia.qml  LobbyScreen.ui.qml  LoginForm.ui.qml  LoginScreen.ui.qml  SettingsScreen.ui.qml  main.qml  qml.qrc
Client/rings/: LoadingRings.qml  Ring.qml
Common/: CMakeLists.txt  Common.pro  card.cpp  card.hpp  client.cpp  client.hpp
Server/: CMakeLists.txt  Server.pro  card.hpp  deck.cpp  deck.hpp  main.cpp  player.cpp  player.hpp  serverinstance.cpp  serverinstance.hpp  session.cpp  session.hpp
ServerClient/: CMakeLists.txt  ServerClient.pri  ServerClient.pro  client.cpp  client.hpp  messages.h
tests/: tests.pro  tst_coretests.cpp
